--- a/hackfest_poc.ipynb
+++ b/hackfest_poc.ipynb
@@ -26,8 +26,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['OPENAI_API_KEY']='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'\n",
-    "os.environ['ACTIVELOOP_TOKEN']='eyJhbGciOiJIUzUxMiIsImlhdCI6MTY4NzczMDAwNywiZXhwIjoxNjkwNzUzOTgwfQ.eyJpZCI6Imw2MGpzcndjIn0.GjmgB3ZXllV65v40RMZiRn7kz_9tpnnon0fEwkVOhpjKZBjV2gPaTAgr6lfIvDsXLVtqQOuBkeVRSuNPUHqS4Q'"
+    "os.environ['OPENAI_API_KEY']='',
+    "os.environ['ACTIVELOOP_TOKEN']=''
    ]
   },
   {
